--- a/linux/debian/harmonoid_0.1.5-1/usr/share/applications/harmonoid.desktop
+++ b/linux/debian/harmonoid_0.1.5-1/usr/share/applications/harmonoid.desktop
@@ -5,7 +5,7 @@ Icon=harmonoid
 Exec=harmonoid
 Terminal=false
 Type=Application
-Categories=AudioVideo;Audio;Player;Sound;Music;
+Categories=AudioVideo;Audio;Player;Music;
 GenericName=Harmonoid
 Keywords=music;audio;lyrics;library;music-library;youtube;
 Terminal=false
