--- a/linux/debian/DEBIAN/control
+++ b/linux/debian/DEBIAN/control
@@ -7,5 +7,6 @@ Architecture: amd64
 Depends: mediainfo, gstreamer1.0-libav, libwebkit2gtk-4.0-dev
 Maintainer: Hitesh Kumar Saini <saini123hitesh@gmail.com>
 Description: Harmonoid
- A music app with a beautiful UI to play local music & YouTube music. Distributes music
- into albums & artists. Has playlists & lyrics.
+ Elegant music app to play local music & YouTube music.
+ Distributes music into albums & artists.
+ Has playlists & lyrics.
