--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: harmonoid
 description: Elegant music app to play local music & YouTube music. Distributes music into albums & artists. Has playlists & lyrics.
 publish_to: "none"
-version: 0.1.7+5003
+version: 0.1.8+5003
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -15,7 +15,7 @@ dependencies:
   flutter_media_metadata:
     git:
       url: https://github.com/alexmercerind/flutter_media_metadata.git
-      ref: 0443eb9bcdf9216ae7a899966e46196badd08ad8
+      ref: 1d1deae09d6ee622d118013b28f3d6bfbabb6b9c
   flutter_acrylic: ^0.0.2
   dart_discord_rpc: ^0.0.2
   fluentui_system_icons: ^1.1.136
@@ -38,6 +38,10 @@ dependencies:
   path: ^1.8.0
   url_launcher: ^6.0.3
   google_fonts: ^2.1.0
+  hotkey_manager:
+    git:
+      url: https://github.com/leanflutter/hotkey_manager.git
+      ref: main
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
 
 dev_dependencies:
@@ -68,7 +72,7 @@ flutter:
         - asset: fonts/Roboto/Roboto-Black.ttf
 
 msix_config:
-  msix_version: 0.1.7.0
+  msix_version: 0.1.8.0
   display_name: Harmonoid
   identity_name: com.alexmercerind.harmonoid
   file_extension: ogg, ogx, aac, m4a, mp3, wma, wav, aiff, flac, opus
