--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,7 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     compileSdkVersion 29
+    ndkVersion '20.1.5948944'
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
