--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   build_windows:
@@ -60,7 +61,7 @@ jobs:
         with:
           channel: "beta"
       - run: sudo apt-get update
-      - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev libmediainfo-dev dpkg-dev
+      - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev libmediainfo-dev dpkg-dev alien
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
       - run: flutter build linux --verbose
@@ -70,6 +71,11 @@ jobs:
           cp -fr build/linux/x64/release/bundle linux/debian/usr/bin
           dpkg-deb --build --root-owner-group linux/debian
           cp linux/*.deb harmonoid-linux-x86_64.deb
+          
+      - name: Build .rpm executable
+        run: |
+          alien -r harmonoid-linux-x86_64.deb
+          mv harmonoid*.rpm harmonoid-linux-x86_64.rpm
 
       - name: Build Tarball
         run: |
@@ -97,10 +103,7 @@ jobs:
           prerelease: false
           body: ""
           tag_name: "vnext"
-          files: |
-            harmonoid-linux-x86_64.deb
-            harmonoid-linux-x86_64.tar.gz
-            harmonoid-linux-x86_64.AppImage
+          files: harmonoid-linux-*
           token: ${{ secrets.GITHUB_TOKEN }}
     
   build_android:
