--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,13 @@ dependencies:
   http: ^0.13.0
   path: ^1.8.0
   url_launcher: ^6.0.3
-  google_fonts: ^2.1.0
   hotkey_manager:
     git:
       url: https://github.com/alexmercerind/hotkey_manager.git
       ref: main
   implicitly_animated_reorderable_list: ^0.4.0-dev+4
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   msix:
