💚 CI: Switch to stable channel

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "beta"
+          channel: "stable"
 
       - run: flutter config --enable-windows-desktop
       - run: flutter pub get
