🏁 Update project tagline

--- a/linux/debian/DEBIAN/control
+++ b/linux/debian/DEBIAN/control
@@ -7,6 +7,4 @@ Architecture: amd64
 Depends: mediainfo, gstreamer1.0-libav, libwebkit2gtk-4.0-dev
 Maintainer: Hitesh Kumar Saini <saini123hitesh@gmail.com>
 Description: Harmonoid
- Elegant music app to play local music & YouTube music.
- Distributes music into albums & artists.
- Has playlists & lyrics.
+ Elegant music app to play & manage music library.
