--- a/linux/debian/usr/share/applications/harmonoid.desktop
+++ b/linux/debian/usr/share/applications/harmonoid.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 Name=Harmonoid
-Comment=Elegant music app to play local music & YouTube music. Distributes music into albums & artists. Has playlists & lyrics.
+Comment=Elegant music app to play & manage music library.
 Icon=harmonoid
 Exec=harmonoid
 StartupWMClass=harmonoid
