--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -59,7 +59,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          channel: "beta"
+          channel: "stable"
       - run: sudo apt-get update
       - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev libwebkit2gtk-4.0-dev libmediainfo-dev dpkg-dev alien
       - run: flutter config --enable-linux-desktop
@@ -71,7 +71,7 @@ jobs:
           cp -fr build/linux/x64/release/bundle linux/debian/usr/bin
           dpkg-deb --build --root-owner-group linux/debian
           cp linux/*.deb harmonoid-linux-x86_64.deb
-          
+
       - name: Build .rpm executable
         run: |
           alien -r harmonoid-linux-x86_64.deb
@@ -105,7 +105,7 @@ jobs:
           tag_name: "vnext"
           files: harmonoid-linux-*
           token: ${{ secrets.GITHUB_TOKEN }}
-    
+
   build_android:
     name: Harmonoid Android
     runs-on: ubuntu-latest
@@ -113,7 +113,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          channel: "beta"
+          channel: "stable"
 
       - name: Create Key Store
         id: create_key_store
@@ -121,7 +121,7 @@ jobs:
         with:
           fileName: "keystore.pfx"
           encodedString: ${{ secrets.KEY_STORE }}
-      
+
       - name: Create Key Properties
         id: create_key_properties
         uses: timheuer/base64-to-file@v1
@@ -131,7 +131,7 @@ jobs:
 
       - run: cp "${{ steps.create_key_store.outputs.filePath }}" android/app/keystore.jks
       - run: cp "${{ steps.create_key_properties.outputs.filePath }}" android/key.properties
-      
+
       - run: flutter pub get
       - run: flutter build apk --verbose
       - run: cp build/app/outputs/flutter-apk/app-release.apk harmonoid-android.apk
