🏗️ Windows: Update CMake build script

--- a/windows/runner/CMakeLists.txt
+++ b/windows/runner/CMakeLists.txt
@@ -22,3 +22,18 @@ add_custom_command(
   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../bin/vcruntime140.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/vcruntime140.dll"
   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../bin/vcruntime140_1.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/vcruntime140_1.dll"
 )
+
+set(LIBMPV_URL "https://udomain.dl.sourceforge.net/project/mpv-player-windows/libmpv/mpv-dev-x86_64-20220116-git-1ba0547.7z")
+set(LIBMPV_ARCHIVE "${CMAKE_BINARY_DIR}/mpv-dev-x86_64-20220116-git-1ba0547.7z")
+if (NOT EXISTS "${LIBMPV_ARCHIVE}")
+  file(DOWNLOAD "${LIBMPV_URL} ${LIBMPV_ARCHIVE}")
+endif()
+
+add_custom_command(
+  TARGET ${BINARY_NAME} POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E tar xzf \"${LIBMPV_ARCHIVE}\"
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_BINARY_DIR}/mpv-2.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/mpv-1.dll"
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../bin/smtc-win32.dll" "$<TARGET_FILE_DIR:${BINARY_NAME}>/smtc-win32.dll"
+  WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
+  DEPENDS "${LIBMPV_ARCHIVE}"
+)
