--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
+          submodules: recursive
 
       - uses: subosito/flutter-action@v1
         with:
@@ -57,6 +60,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
+          submodules: recursive
+
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
@@ -111,6 +118,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
+          submodules: recursive
+
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
