💚 Fix Windows build

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build_windows:
     name: Harmonoid Windows
+    env:
+      ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
     runs-on: windows-latest
 
     steps:
@@ -23,8 +25,6 @@ jobs:
       - run: flutter config --enable-windows-desktop
       - run: flutter pub get
       - run: flutter build windows
-
-      - run: rmdir /s /q build\\windows\\runner\\Release\\data\\flutter_assets\\packages\\desktop
 
       - name: Create PFX
         id: create_pfx
